fix: table spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 table {
-    width: 95%;
+    width: 100%;
     overflow: hidden;
     background-color: white;
     padding: 5px;
